# Esercizi-cpp

PositionObserver/: CMakeLists.txt  Device.cpp  Device.h  DisplayOnMap.cpp  DisplayOnMap.h  NotifyPositionChange.cpp  NotifyPositionChange.h  Observer.h  Subject.h  main.cpp
Shop/: CMakeLists.txt  Customer.cpp  Customer.h  Order.cpp  Order.h  OrderItem.cpp  OrderItem.h  Product.h  main.cpp
adapter/: Adapter.h  AdvancedMediaPlayer.h  CMakeLists.txt  H264Player.h  MediaPlayer.h  VideoPlayer.h  WMVPlayer.h  main.cpp
credenziali/: CMakeLists.txt  Credenziali.cpp  Credenziali.h  GestoreCredenziali.cpp  GestoreCredenziali.h  main.cpp
factory/: AbstractFactory.h  CMakeLists.txt  Directory.h  File.h  FileSystemObj.h  LinuxDirectory.h  LinuxFactory.h  LinuxFile.h  WindowsDirectory.h  WindowsFactory.h  WindowsFile.h  main.cpp
matrici/: CMakeLists.txt  main.cpp
multimedia/: Audio.cpp  Audio.h  BlockNote.cpp  BlockNote.h  CMakeLists.txt  Image.cpp  Image.h  Note.h  Text.cpp  Text.h  main.cpp
productfactory/: CMakeLists.txt  main.cpp
ristorante/: Customer.h  Reservation.h  ReservationSystem.h  Restaurant.h  Table.h  main.cpp
veicoli/: Automobile.cpp  Automobile.h  CMakeLists.txt  Furgone.cpp  Furgone.h  Motocicletta.cpp  Motocicletta.h  Vehicle.h  main.cpp
